added more copy and screenshots for projects

--- a/index.html
+++ b/index.html
@@ -89,13 +89,27 @@
 
 
     <div class = "creations">
-      <div id="futurego" class="panel">
-        <!--http://vizi.gl/engine/tests/futurgo.html -->
-        <img src="assets/img/futurego.gif"></img>
+      <div id="futurgo" class="panel">
+        <img src="assets/img/futurgo.jpg"></img>
+        <p>This <a href = "http://vizi.gl/engine/tests/futurgo.html" target=blank>“lifestyle transportation device”</a> concept car was created by Tony and TC for Tony’s new O’Reilly Media book, Programming 3D Applications in HTML5 and WebGL. It was developed to illustrate how to create a 3D product shopping experience, integrating a virtual model of a product into an HTML5 page with rollovers, links to drive animations and integrated overlays and backgrounds using CSS3.</p>
       </div> 
       <div id="razer" class="panel">
-        <img src="assets/img/razer.gif"></img>
-        <!-- http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm-->
+        <img src="assets/img/razer.jpg"></img>
+        <p>A <a href="http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm" target="blank">prototype web experience</a> Vizi developed for the hardware manufacture Razer for their award-winning Edge Pro tablet.  We took the original Edge static web pages and brought them to life with WebGL. The site features 4 different form factors of the Edge Pro, with video playing on the screen and integrated audio.</p>
+      </div> 
+      <div id="tcho" class="panel">
+        <img src="assets/img/tcho.jpg"></img>
+        <p>This <a href="http://vr.fxpal.com/" target="blank">virtual presentation</a> of the <a href="https://www.tcho.com" target="blank">TCHO</a> Chocolate factory was developed in Unity, outfitted with video cameras, and attached to their factory automation monitoring system. Runs on PC/Mac/Web/iOS/Android. It has a 'tourisim' mode (where users learn about the chocolate making process) and 'tech' mode (where the factory workers can monitor the actual factory via this simulation). Project for <a href="https://www.tcho.com" target="blank">FX Palo Alto Laboratory.</a></p>
+      </div> 
+      <div id="castle" class="panel">
+        <img src="assets/img/castle.jpg"></img>
+        <p>This castle is a model of Schloss Falkenstein, a designed-but-never-built castle, larger than the actual Neuschwannstein, in Bavaria. Modeled in Unreal circa 2001, converted to X3D in 2002, and rendered in the Oculus Ready Player (which imports X3D).</p>
+        <a href= "http://oculusready.com">Oculus Ready</a>
+      </div> 
+       <div id="heart" class="panel">
+        <img src="assets/img/heart.jpg"></img>
+        <p>Developed for Levi’s <a href="http://www.akqa.com/thought/articles/2013-09-levis-make-our-mark " target="blank">Make our Mark</a> campaign in partnership with <a href="http://www.akqa.com/" target="blank">AKQA</a>, under the direction of Chief Creative Office Rei Inamoto. Tony and Simo used Uno to develop a contemplative piece that integrates an interactive beating heart with user-generated music and images via SoundCloud and Instagram.
+        </p>
       </div> 
     </div>
 
