--- a/index.html
+++ b/index.html
@@ -101,12 +101,21 @@
         <img src="assets/img/tcho.jpg"></img>
         <p>This <a href="http://vr.fxpal.com/" target="blank">virtual presentation</a> of the <a href="https://www.tcho.com" target="blank">TCHO</a> Chocolate factory was developed in Unity, outfitted with video cameras, and attached to their factory automation monitoring system. Runs on PC/Mac/Web/iOS/Android. It has a 'tourisim' mode (where users learn about the chocolate making process) and 'tech' mode (where the factory workers can monitor the actual factory via this simulation). Project for <a href="https://www.tcho.com" target="blank">FX Palo Alto Laboratory.</a></p>
       </div> 
+      <div id="holiday" class="panel">
+        <img src="assets/img/holiday.jpg"></img>
+        <p>A virtual reality interface to the Internet of Things. Tony used WebGL and Leap.js to create a 3D interactive interface to the <a href="http://moorescloud.com/" target="blank">Holiday</a> light by MooresCloud. A web page containing a 3D color cube allows the user to quickly select individual or flood fill colors to change a string of 50 programmable LED lights. The cube is controlled via the mouse, keyboard or a Leap Motion controller.
+        </p>
+      </div> 
+      <div id="garden" class="panel">
+        <img src="assets/img/garden.jpg"></img>
+        <p>Epic Games’ sample garden from the Unreal Developer Kit, made Rift-ready by Dave. Sitting in the warm outdoors. Nice little vacation, great de-stresser! Sound of water, frogs, wind, etc...</p>
+      </div> 
       <div id="castle" class="panel">
         <img src="assets/img/castle.jpg"></img>
         <p>This castle is a model of Schloss Falkenstein, a designed-but-never-built castle, larger than the actual Neuschwannstein, in Bavaria. Modeled in Unreal circa 2001, converted to X3D in 2002, and rendered in the Oculus Ready Player (which imports X3D).</p>
         <a href= "http://oculusready.com">Oculus Ready</a>
       </div> 
-       <div id="heart" class="panel">
+      <div id="heart" class="panel">
         <img src="assets/img/heart.jpg"></img>
         <p>Developed for Levi’s <a href="http://www.akqa.com/thought/articles/2013-09-levis-make-our-mark " target="blank">Make our Mark</a> campaign in partnership with <a href="http://www.akqa.com/" target="blank">AKQA</a>, under the direction of Chief Creative Office Rei Inamoto. Tony and Simo used Uno to develop a contemplative piece that integrates an interactive beating heart with user-generated music and images via SoundCloud and Instagram.
         </p>
