--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 <script src="js/vendor/OrbitControls.js"></script>
 <script src="js/lib/MathHelpers.js"></script>
 <script src="js/animations.js"></script>
+<script src="js/textAnimations.js"></script>
 <script src="js/statue.js"></script>
 <script src="js/world.js"></script>
 
