refactoring animations into separate files for code readability

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 <script src="js/vendor/tween.min.js"></script>
 <script src="js/vendor/OrbitControls.js"></script>
 <script src="js/lib/MathHelpers.js"></script>
-<script src="js/animations.js"></script>
+<script src="js/frameAnimations.js"></script>
+<script src="js/cameraAnimations.js"></script>
 <script src="js/textAnimations.js"></script>
 <script src="js/statue.js"></script>
 <script src="js/world.js"></script>
