choose text anchor

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 <script src="js/vendor/OrbitControls.js"></script>
 <script src="js/lib/MathHelpers.js"></script>
 <script src="js/frameAnimations.js"></script>
+<script src="js/text3d-menu.js"></script>
 <script src="js/cameraAnimations.js"></script>
 <script src="js/textAnimations.js"></script>
 <script src="js/statue.js"></script>
