--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
          <a href="http://dusanbosnjak.com/about/" target="blank">dusanbosnjak.com/about/</a></p>
       </div>
 
+      <div id = "simo" class="panel">
+        <p>Simo, from Helsinki, Finland, is a demoscene hobbyist and open-source contributor and is always creating something (like his one-man award-stealing operation, the music visualiser APEXvj.) In the summer of 2012 he went freelance, set-up a company called Odd Circle.
+        </p>
+
+        <p>
+          This indie Creative Coder is one of those who has always bent the limits of what can be done with Flash, and has now moved to a new technology called UNO&Realtime Studio from Outracks Technologies. He was the first developer who had the chance to explore this new toy and has used it on a daily basis ever since to develop WebGL, iOS and Android for various clients and to create his own experimental projects.
+        </p>
+        <p><a href="http://www.simppa.fi">simppa.fi</a></p>
+        <p><a href="http://twitter.com/simppafi">@simppafi</a><p>
+      </div>
+
+
       <div id = 'eric' class = "panel">
         <p>Eric is a creative coder who gets incredibly excited about all the rich interactive experiences just waiting to be brought into existence. While working as a front end engineer by day, Eric was surprised yet delighted to discover many of his evenings coding webgl turning into intense, all night, passionate hackathons. As he fell more deeply in love with his night work, the days became more and more drab, until he realized he had to devote himself towards his creative work 100%, and left his day job behind.
         Check out his <a href="ericrius1.github.io" target="blank">website</a> and follow him on twitter- @ericrius1</p>
