added simo and link to his project

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <img src="assets/img/heart.jpg"></img>
           <p>Developed for Levi’s <a href="http://www.akqa.com/thought/articles/2013-09-levis-make-our-mark " target="blank">Make our Mark</a> campaign in partnership with <a href="http://www.akqa.com/" target="blank">AKQA</a>, under the direction of Chief Creative Office Rei Inamoto. Tony and Simo used Uno to develop a contemplative piece that integrates an interactive beating heart with user-generated music and images via SoundCloud and Instagram.
           </p>
+          <p> Check out the <a href = "http://www.simppa.fi/socialheart/polished2/"> live demo</a></p>
         </div>
  
         <div id="holiday" class="panel">
