added target blanks to links that were missing them

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <p>
           This indie Creative Coder is one of those who has always bent the limits of what can be done with Flash, and has now moved to a new technology called UNO&Realtime Studio from Outracks Technologies. He was the first developer who had the chance to explore this new toy and has used it on a daily basis ever since to develop WebGL, iOS and Android for various clients and to create his own experimental projects.
         </p>
-        <p><a href="http://www.simppa.fi">simppa.fi</a></p>
-        <p><a href="http://twitter.com/simppafi">@simppafi</a><p>
+        <p><a href="http://www.simppa.fi" target="blank">simppa.fi</a></p>
+        <p><a href="http://twitter.com/simppafi" target="blank">@simppafi</a><p>
       </div>
 
 
@@ -105,7 +105,7 @@
 
         <div id="futurgo">
           <img src="assets/img/futurgo.jpg"></img>
-          <p>This <a href = "http://vizi.gl/engine/tests/futurgo.html" target=blank>“lifestyle transportation device”</a> concept car was created by Tony and TC for Tony’s new O’Reilly Media book, Programming 3D Applications in HTML5 and WebGL. It was developed to illustrate how to create a 3D product shopping experience, integrating a virtual model of a product into an HTML5 page with rollovers, links to drive animations and integrated overlays and backgrounds using CSS3.</p>
+          <p>This <a href = "http://vizi.gl/engine/tests/futurgo.html" target="blank">“lifestyle transportation device”</a> concept car was created by Tony and TC for Tony’s new O’Reilly Media book, Programming 3D Applications in HTML5 and WebGL. It was developed to illustrate how to create a 3D product shopping experience, integrating a virtual model of a product into an HTML5 page with rollovers, links to drive animations and integrated overlays and backgrounds using CSS3.</p>
         </div> 
 
         <div id="razer" class="panel">
@@ -125,7 +125,7 @@
         <div id="castle" class="panel">
           <img src="assets/img/castle.jpg"></img>
           <p>This castle is a model of Schloss Falkenstein, a designed-but-never-built castle, larger than the actual Neuschwannstein, in Bavaria. Modeled in Unreal circa 2001, converted to X3D in 2002, and rendered in the Oculus Ready Player (which imports X3D).</p>
-          <a href= "http://oculusready.com">Oculus Ready</a>
+          <a href= "http://oculusready.com" target="blank">Oculus Ready</a>
         </div>
 
         <div id="garden" class="panel">
@@ -141,7 +141,7 @@
           <img src="assets/img/heart.jpg"></img>
           <p>Developed for Levi’s <a href="http://www.akqa.com/thought/articles/2013-09-levis-make-our-mark " target="blank">Make our Mark</a> campaign in partnership with <a href="http://www.akqa.com/" target="blank">AKQA</a>, under the direction of Chief Creative Office Rei Inamoto. Tony and Simo used Uno to develop a contemplative piece that integrates an interactive beating heart with user-generated music and images via SoundCloud and Instagram.
           </p>
-          <p> Check out the <a href = "http://www.simppa.fi/socialheart/polished2/"> live demo</a></p>
+          <p> Check out the <a href = "http://www.simppa.fi/socialheart/polished2/" target="blank"> live demo</a></p>
         </div>
  
         <div id="holiday" class="panel">
