added subject to contact form

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
 
         <div id="futurgo">
           <img src="assets/img/futurgo.jpg"></img>
-          <p>This <a href = "http://vizi.gl/engine/tests/futurgo.html" target="blank">“lifestyle transportation device”</a> concept car was created by Tony and TC for Tony’s new O’Reilly Media book, Programming 3D Applications in HTML5 and WebGL. It was developed to illustrate how to create a 3D product shopping experience, integrating a virtual model of a product into an HTML5 page with rollovers, links to drive animations and integrated overlays and backgrounds using CSS3.</p>
+         <!--  <p>This <a href = "http://vizi.gl/engine/tests/futurgo.html" target="blank">“lifestyle transportation device”</a> concept car was created by Tony and TC for Tony’s new O’Reilly Media book, Programming 3D Applications in HTML5 and WebGL. It was developed to illustrate how to create a 3D product shopping experience, integrating a virtual model of a product into an HTML5 page with rollovers, links to drive animations and integrated overlays and backgrounds using CSS3.</p> -->
         </div> 
 
         <div id="razer" class="panel">
           <img src="assets/img/razer.jpg"></img>
-          <p>A <a href="http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm" target="blank">prototype web experience</a> Vizi developed for the hardware manufacture Razer for their award-winning Edge Pro tablet.  We took the original Edge static web pages and brought them to life with WebGL. The site features 4 different form factors of the Edge Pro, with video playing on the screen and integrated audio.</p>
+          <!-- <p>A <a href="http://vizi.gl/razer_prototype/razerzone.com/Razer%20Edge%204.htm" target="blank">prototype web experience</a> Vizi developed for the hardware manufacture Razer for their award-winning Edge Pro tablet.  We took the original Edge static web pages and brought them to life with WebGL. The site features 4 different form factors of the Edge Pro, with video playing on the screen and integrated audio.</p> -->
         </div>    
 
       </div>
