working on left menu transition

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <!--=== End Header ===-->  
     <div class="left-menu">
-      <div ng-view></div>
+      <div class="left-menu-group" ng-view></div>
     </div>
 
     <div class="team">
@@ -165,6 +165,7 @@
 
 <script src= "bower_components/angular/angular.js"></script>
 <script src= "bower_components/angular-route/angular-route.js"></script>
+<script src= "bower_components/angular-animate/angular-animate.js"></script>
 <script src="js/app.js"></script>
 <script src="js/modules/frames.js"></script>
 
