Technologies are scrolling in tech menu

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- CSS Global Compulsory -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link href="bower_components/angular-carousel/dist/angular-carousel.css" rel="stylesheet" type="text/css" />
 </head>	
 
 <body>
@@ -166,6 +167,8 @@
 <script src= "bower_components/angular/angular.js"></script>
 <script src= "bower_components/angular-route/angular-route.js"></script>
 <script src= "bower_components/angular-animate/angular-animate.js"></script>
+<script src="/bower_components/angular-touch/angular-touch.js"></script>
+<script src= "bower_components/angular-carousel/dist/angular-carousel.js"></script>
 <script src="js/app.js"></script>
 <script src="js/modules/frames.js"></script>
 
