added dave copy

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         Read more about Tony at <a href="http://www.tonyparisi.com/" target="blank">www.tonyparisi.com</a> and follow him on twitter at @auradeluxe</p>
       </div>
       <div id ="dave" class="panel">
-        <p>Programming for 35 years, 30 of that paid, first project was FPS maze game, which I paid $1/hour to make on a public library's Commodore Pet.</p>
+        <p>I have been programming for 35 years, 30 of that paid. My first project was FPS maze game, which I paid $1/hour to make on a public library's Commodore Pet. I’ve always been interested in entertainment, technology, all forms of history and science. I have designed and built 7 different 3D systems consisting of a DB backend and 3D front-end for such as Vivaty, Arrival3d, Playing Mondo, and others. Pro Unity user (full stack, mainly programming) since 2009. In top 10 in Unity 'answers' forum (once as high as #4). As a consulting CTO my clients include Siemens, Euman, Tanzle, others.  I am actively using Hydra, Kinect, Intel, Oculus Rift, zSpace, augmented reality, mobile devices, on a daily basis professionally.
         <p>I was VR before VR was cool.</p>
         <a href="http://davearendash.com" target="blank">davearendash.com</a></p>
       </div>
