changed tony's bio and added marina

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="team">
       <div id = 'tony' class = "panel">
-        <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy 3D software applications, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony founded Vizi in 2013, and oversees development and operations. 
+        <p>Tony is an entrepreneur and career CTO/software architect who has developed international standards and protocols, developed noteworthy 3D software applications, and started and sold technology companies. Tony’s passion for innovating is exceeded only by his desire to build great products. His mission now is to bring virtual reality experiences to every person on the planet, running on every device, anywhere, any time. Tony is the author of two O’Reilly Media books on WebGL, <a href = "http://www.amazon.com/WebGL-Up-Running-Tony-Parisi/dp/144932357X" target = "blank"> WebGL Up and Running </a> and <a href = "http://www.amazon.com/WebGL-Up-Running-Tony-Parisi/dp/144932357X" target= "blank"> Programming 3D Applications in HTML5 and WebGL.</a>
         Read more about Tony at <a href="http://www.tonyparisi.com/" target="blank">www.tonyparisi.com</a> and follow him on twitter at @auradeluxe</p>
       </div>
       <div id ="dave" class="panel">
@@ -96,6 +96,10 @@
       <div id = 'eric' class = "panel">
         <p>Eric is a creative coder who gets incredibly excited about all the rich interactive experiences just waiting to be brought into existence. While working as a front end engineer by day, Eric was surprised yet delighted to discover many of his evenings coding webgl turning into intense, all night, passionate hackathons. As he fell more deeply in love with his night work, the days became more and more drab, until he realized he had to devote himself towards his creative work 100%, and left his day job behind.
         Check out his <a href="ericrius1.github.io" target="blank">website</a> and follow him on twitter- @ericrius1</p>
+      </div>
+
+      <div id = "marina" class = "panel">
+        <p>Marina is an artist and visual designer exploring the intersection of the real and virtual worlds. Marina has a fine arts background and extensive production experience in video, advertising and live events. She is Vizi’s creative conscience and design tsarina, always making sure we deliver our creative best for the client.</p>
       </div>
     </div>
  
